Tue Feb 10 01:02:16 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: generate intern_family_noprefix.

	* ext/socket/option.c (sockopt_inspect): use intern_family_noprefix
	  not to show AF_ prefix.

	* ext/socket/ancdata.c (ancillary_inspect): ditto.

Mon Feb  9 23:21:29 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/constants.c (level_arg): use unknown_level_to_int for
	  non internet protocol.
	  (optname_arg): use only so_optname_to_int for non internet protocol.
	  (cmsg_type_arg): use only scm_optname_to_int for non internet
	  protocol.

	* ext/socket/mkconstants.rb: generate unknown_level_to_int.
	  rename iplevel_to_int to ip_level_to_int.

Mon Feb  9 23:04:27 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/mkconstants.rb: rename level_to_int to iplevel_to_int.
	  rename intern_level to intern_iplevel.

	* ext/socket/constants.c: follow the renaming.

	* ext/socket/option.c: ditto.

	* ext/socket/ancdata.c: ditto.

Mon Feb  9 22:52:13 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/rubysocket.h (level_arg): add family argument.
	  (optname_arg): ditto.
	  (cmsg_type_arg): ditto.
	  (rb_sock_getfamily): declared.

	* ext/socket/constants.c (level_arg): add family argument.
	  (optname_arg): ditto.
	  (cmsg_type_arg): ditto.

	* ext/socket/init.c (rb_sock_getfamily): defined.

	* ext/socket/option.c (sockopt_initialize): give family for level_arg
	  and optname_arg.
	  (sockopt_s_int): ditto.

	* ext/socket/basicsocket.c (bsock_setsockopt): ditto.
	  (bsock_getsockopt): ditto.

	* ext/socket/ancdata.c (ancillary_initialize): ditto.
	  (ancillary_s_int): ditto.
	  (ancillary_cmsg_is_p): ditto.
	  (bsock_sendmsg_internal): ditto.
	  (bsock_recvmsg_internal): use rb_sock_getfamily.

Mon Feb  9 21:48:59 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_inspect): show address family.

Mon Feb  9 20:19:36 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/basicsocket.c (bsock_getsockname): use sockaddr_storage.
